fix(feature-4): update item spacing, add icon background prop, and rename background field

--- a/editor-components/feature/feature4/feature4.module.scss
+++ b/editor-components/feature/feature4/feature4.module.scss
@@ -160,12 +160,6 @@
         }
 
         .vertical {
-          min-height: 250px;
-          height: 100%;
-          padding: var(--composer-gap-lg) var(--composer-gap-xl);
-          transition: opacity 0.6s ease;
-          gap: var(--composer-gap-lg);
-          justify-content: center;
 
           .icon-container,
           .icon-container-no-bg {
@@ -181,16 +175,36 @@
               margin: 0;
               width: 30px;
               height: 30px;
+              font-size: 2rem;
               color: var(--composer-font-color-secondary);
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+
+            &.no-background {
+              background-color: transparent !important;
             }
           }
 
           .icon-container {
             background-color: #f4e9d5;
+
+            &.no-background {
+              .icon {
+                color: #f4e9d5 !important;
+              }
+            }
           }
 
           .icon-container-no-bg {
             background-color: var(--composer-primary-color);
+
+            &.no-background {
+              .icon {
+                color: var(--composer-primary-color) !important;
+              }
+            }
           }
 
           .title {
